...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="lZy-FG-fbA" id="Hcf-DY-3fV"/>
                            <outlet property="delegate" destination="lZy-FG-fbA" id="xP2-gz-tst"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Adicionar item" id="zBi-VN-gqX">
                        <barButtonItem key="leftBarButtonItem" title="Cancelar" id="19R-AG-ibJ">
                            <connections>
                                <action selector="tapCancel:" destination="lZy-FG-fbA" id="Zhf-N2-yoh"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Salvar" id="LwP-aj-4xx">
                            <connections>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="JLy-BZ-DzC" id="ANA-Mg-WDO"/>
                            <outlet property="delegate" destination="JLy-BZ-DzC" id="bqq-eY-Zuw"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Checklists" id="DUd-7E-jKd">
                        <barButtonItem key="leftBarButtonItem" image="config" id="aGq-cO-kev">
                            <connections>
                                <segue destination="vQl-ZT-7zH" kind="show" id="vvj-fs-4iT"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="kR7-vQ-Wzd">
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="FKy-ji-8OJ" id="hEm-Xv-a1p"/>
                            <outlet property="delegate" destination="FKy-ji-8OJ" id="bZi-PP-kAC"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Adicionar checklist" id="C1R-ru-2gd">
                        <barButtonItem key="leftBarButtonItem" title="Cancelar" id="dAZ-R8-zRa">
                            <connections>
                                <action selector="tapCancel" destination="FKy-ji-8OJ" id="iQm-Vb-meX"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Salvar" id="wYT-zA-Azn">
...
