...

    var items: [Checklist]
    
    required init?(coder aDecoder: NSCoder) {
        items = [Checklist]()
        let row0item = Checklist()
        row0item.name = "Lista 1"
        items.append(row0item)
        let row1item = Checklist()
        row1item.name = "Lista 2"
        items.append(row1item)
        let row2item = Checklist()
        row2item.name = "Lista 3"
...
