...
    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(true)
        
        done.isEnabled = false
        
        if let item = itemToEdit{
            title = "Editar item"
            name.text = item.text
            done.isEnabled = true
        }
        
        name.delegate = self
        name.becomeFirstResponder()
...
