...
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        if let checklist = checklistToEdit{
            title = "Editar Checklist"
            name.text = checklist.name
            done.isEnabled = true
            iconName = checklist.iconName
        }
        
        iconImage.image = UIImage(named:iconName)
...
